
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1741] Fixed possible bug with radio/cb tv labels
- [#MODX-1593] Fixed bug where User could not be added with no role in User Groups tree
- [#MODX-1735] Properly URL encode link tags while still preserving = and &amp; in query string
- [#MODX-1736] Fixed bug with assigning TVs to Resource Groups
- [#MODX-1740] Added workaround for SQL code to properly hide TVs with FC rules 
- [#MODX-1738] Fixed bug with radiogroups and set TV default FC rule
- Fixed some header issues, _FILES content type handling
- [#MODX-1733] Fixed bug that was stripping tags from connector processing
- Ensured that Static Resource filename change fires dirty status
- Made sure Set to Default fires dirty status for Resource panel
- Fixed possible width stretching bug in TV panel in Resource edit view
- [#MODX-1543] Added "Rename Category" to category nodes in element subnodes in Element Tree
- [#MODX-933] Can now drag/drop Elements into Categories in the Element Tree to assign them to Categories
- [#MODX-1729] Fixed incorrect filter name to be more appropriate to function
- [#MODX-1727] Added missing Empty Cache checkbox to derivative resource panels
- [#MODX-1724] Fixed bug with output renders in TV panel not triggering panel dirty status
- [#MODX-1730] Fixed bug with $scriptProperties and login processor
- Some cleanups to MODExt flow and ID referencing
- Changed all GPC references in processors to $scriptProperties, which is loaded at entrance points to processors with GPC vars, pushing input handling to the connector
- [#MODX-1711] Fixed bug with strip output filter
- Added ellipsis output filter