@@ -40,7 +40,23 @@ MODx.grid.Language = function(config) {
     });
     MODx.grid.Language.superclass.constructor.call(this,config);
 };
-Ext.extend(MODx.grid.Language,MODx.grid.Grid);
+Ext.extend(MODx.grid.Language,MODx.grid.Grid,{
+    duplicateLanguage: function(btn,e) {
+        var df = Ext.Ajax.timeout;
+        Ext.Ajax.timeout = 0;
+        this.menu.record.new_name = _('duplicate_of')+this.menu.record.name;
+        this.loadWindow(btn,e,{
+            xtype: 'modx-window-language-duplicate'
+            ,record: this.menu.record
+            ,listeners: {
+                'success': {fn:function(r) {
+                    Ext.Ajax.timeout = df;
+                    this.refresh();
+                },scope:this}
+            }
+        });
+    }
+});
 Ext.reg('modx-grid-language',MODx.grid.Language);
 
 /**
@@ -71,3 +87,39 @@ MODx.window.CreateLanguage = function(config) {
 };
 Ext.extend(MODx.window.CreateLanguage,MODx.Window);
 Ext.reg('modx-window-language-create',MODx.window.CreateLanguage);
+
+MODx.window.DuplicateLanguage = function(config) {
+    config = config || {};
+    var r = config.record;
+    Ext.applyIf(config,{
+        title: _('language_duplicate')
+        ,url: MODx.config.connectors_url+'system/language.php'
+        ,action: 'duplicate'
+        ,fields: [{
+            xtype: 'statictextfield'
+            ,fieldLabel: _('duplicate')
+            ,name: 'name'
+            ,width: 300
+            ,maxLength: 100
+            ,allowBlank: false
+            ,submitValue: true
+        },{
+            xtype: 'textfield'
+            ,fieldLabel: _('language_new_name')
+            ,description: _('language_new_name_desc')
+            ,name: 'new_name'
+            ,width: 300
+            ,allowBlank: false
+        },{
+            xtype: 'checkbox'
+            ,boxLabel: _('language_recursive')
+            ,description: _('language_recursive_desc')
+            ,name: 'recursive'
+            ,inputValue: 1
+            ,checked: true
+        }]
+    });
+    MODx.window.DuplicateLanguage.superclass.constructor.call(this,config);
+};
+Ext.extend(MODx.window.DuplicateLanguage,MODx.Window);
+Ext.reg('modx-window-language-duplicate',MODx.window.DuplicateLanguage);
